--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "restaurant",
   "version": "1.0.0",
   "description": "Restaurant Review Stage 2",
-  "main": "main.js",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,11 +17,24 @@
   },
   "homepage": "https://github.com/morisasy/restaurant#readme",
   "dependencies": {
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sourcemaps": "^2.6.4",
     "idb": "^2.1.2"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "browser-sync": "^2.24.4",
     "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1"
-  }
+    "gulp-babel": "^7.0.1",
+    "gulp-clean-css": "^3.9.4",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-newer": "^1.4.0"
+  },
+  "keywords": [
+    "Javascript",
+    "Gulpt",
+    "HTML5",
+    "Nodejs",
+    "PWA"
+  ]
 }
