--- a/package.json
+++ b/package.json
@@ -17,18 +17,29 @@
   },
   "homepage": "https://github.com/morisasy/restaurant#readme",
   "dependencies": {
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-sourcemaps": "^2.6.4",
     "idb": "^2.1.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.24.4",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-clean-css": "^3.9.4",
+    "gulp-concat": "^2.6.1",
+    "gulp-flatmap": "^1.0.2",
+    "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
-    "gulp-newer": "^1.4.0"
+    "gulp-newer": "^1.4.0",
+    "gulp-rev": "^8.1.1",
+    "gulp-uglify": "^3.0.0",
+    "gulp-usemin": "^0.3.29",
+    "merge-stream": "^1.0.1"
   },
   "keywords": [
     "Javascript",
