--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-newer": "^1.4.0",
+    "gulp-notify": "^3.2.0",
     "gulp-rev": "^8.1.1",
     "gulp-uglify": "^3.0.0",
     "gulp-usemin": "^0.3.29",
