--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "dependencies": {
     "gulp-autoprefixer": "^5.0.0",
     "gulp-minify-css": "^1.2.4",
-    "gulp-sourcemaps": "^2.6.4",
-    "idb": "^2.1.2"
+    "gulp-sourcemaps": "^2.6.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -40,6 +39,7 @@
     "gulp-rev": "^8.1.1",
     "gulp-uglify": "^3.0.0",
     "gulp-usemin": "^0.3.29",
+    "idb": "^2.1.3",
     "merge-stream": "^1.0.1"
   },
   "keywords": [
