--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "gulp-autoprefixer": "^5.0.0",
     "gulp-minify-css": "^1.2.4",
-    "gulp-sourcemaps": "^2.6.4"
+    "idb": "^2.1.3",
+    "idb-keyval": "^3.0.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -31,6 +32,7 @@
     "gulp-babel": "^7.0.1",
     "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.2.0",
     "gulp-flatmap": "^1.0.2",
     "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
@@ -38,14 +40,15 @@
     "gulp-notify": "^3.2.0",
     "gulp-rename": "^1.3.0",
     "gulp-rev": "^8.1.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-usemin": "^0.3.29",
-    "idb": "^2.1.3",
-    "merge-stream": "^1.0.1"
+    "merge-stream": "^1.0.1",
+    "sw-precache": "^5.2.1"
   },
   "keywords": [
     "Javascript",
-    "Gulpt",
+    "Gulp",
     "HTML5",
     "Nodejs",
     "PWA"
