--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-usemin": "^0.3.29",
+    "gulp-webp": "^3.0.0",
     "merge-stream": "^1.0.1",
     "sw-precache": "^5.2.1"
   },
